--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "vite"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
