your message here

--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
 PORT=5000
-#MONGO_URI=mongodb+srv://Geetabhatt:Geeta%402004@cluster0.ermzsj1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-MONGO_URI=mongodb+srv://testuser:test123@cluster0.gc0ezbq.mongodb.net/
+MONGO_URI=mongodb+srv://Geetabhatt:Geeta%402004@cluster0.ermzsj1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=supersecretlongrandomstring
 NODE_ENV=development
-VITE_GEMINI_API_KEY=AIzaSyCk4-UWf2fBpv1ATOcy0qVUEAlhkeoCND4
+VITE_GEMINI_API_KEY=AIzaSyA-YOtp6guex8fxM8ZVF4_oeI46VyE_HOg
+
+
+
 
 
