--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.0",
+    "mongoose": "^8.19.1",
+    "openai": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.1"
@@ -28,5 +29,18 @@
     "concurrently": "^9.2.1",
     "nodemon": "^3.1.10",
     "vite": "^5.0.0"
-  }
+  },
+  "description": "",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/01Avantika/Educhat.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/01Avantika/Educhat/issues"
+  },
+  "homepage": "https://github.com/01Avantika/Educhat#readme"
 }
