--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 PORT=5000
-MONGO_URI=mongodb+srv://Geetabhatt:Geeta%402004@cluster0.ermzsj1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+#MONGO_URI=mongodb+srv://Geetabhatt:Geeta%402004@cluster0.ermzsj1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://solankiavantika930_db_user:mahi1234@cluster0.mblon5s.mongodb.net/
+
 JWT_SECRET=supersecretlongrandomstring
 NODE_ENV=development
 VITE_GEMINI_API_KEY=AIzaSyA-YOtp6guex8fxM8ZVF4_oeI46VyE_HOg
