--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@vitejs/plugin-react": "^4.0.0",
     "concurrently": "^9.2.1",
+    "eslint": "^9.39.1",
     "nodemon": "^3.1.10",
     "vite": "^5.0.0"
   },
